--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,17 @@ header {
 button {
   padding: 0.25rem 0.5rem;
 }
+
+main {
+  display: grid;
+  gap: 1ch;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: bold;
+}
+
+@media (width >= 500px) {
+  main {
+    grid-template-columns: 1fr 2fr;
+  }
+}
